--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -94,6 +94,7 @@
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>src;src\Graphics\GLs;src\Graphics\Graphicals;src\Graphics\Meshes;src\Maths;src\Graphics\Utils\Textures;src/vendor/imgui;src/test;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -157,9 +158,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\Game\BlockMesh.cpp" />
+    <ClCompile Include="src\Game\Block.cpp" />
     <ClCompile Include="src\Game\Game.cpp" />
-    <ClCompile Include="src\Game\Time.cpp" />
+    <ClCompile Include="src\Game\GameTime.cpp" />
+    <ClCompile Include="src\Game\World.cpp" />
     <ClCompile Include="src\Graphics\GLs\DynamicIndexBuffer.cpp" />
     <ClCompile Include="src\Graphics\GLs\IndexBuffer.cpp" />
     <ClCompile Include="src\Graphics\GLs\Renderer.cpp" />
@@ -197,9 +199,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Debugging.h" />
-    <ClInclude Include="src\Game\BlockMesh.h" />
+    <ClInclude Include="src\Game\Block.h" />
     <ClInclude Include="src\Game\Game.h" />
-    <ClInclude Include="src\Game\Time.h" />
+    <ClInclude Include="src\Game\GameTime.h" />
+    <ClInclude Include="src\Game\World.h" />
     <ClInclude Include="src\Graphics\GLs\DynamicIndexBuffer.h" />
     <ClInclude Include="src\Graphics\GLs\DynamicVertexBuffer.h" />
     <ClInclude Include="src\Graphics\GLs\Graphics.h" />
