--- a/OpenGL/.gitignore
+++ b/OpenGL/.gitignore
@@ -1,9 +1,5 @@
-﻿bin/intermediates/Win32/Debug/OpenGL.ilk
-bin/intermediates/Win32/Debug/OpenGL.tlog/CL.command.1.tlog
-bin/intermediates/Win32/Debug/OpenGL.tlog/CL.read.1.tlog
-bin/intermediates/Win32/Debug/OpenGL.tlog/CL.write.1.tlog
-bin/intermediates/Win32/Debug/OpenGL.tlog/link.read.1.tlog
-bin/intermediates/Win32/Debug/vc143.idb
-bin/intermediates/Win32/Debug/vc143.pdb
-bin/Win32/Debug/OpenGL.exe
-bin/Win32/Debug/OpenGL.pdb
+﻿OpenGL/bin/
+OpenGL/src/vendor/include/
+OpenGL/src/vendor/imgui-1.60/
+OpenGL/.idea/
+OpenGL/.vs/
