--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -92,7 +92,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>src;src\Graphics\GLs;src\Graphics\Graphicals;src\Graphics\Meshes;src\Maths;src\Graphics\Utils\Textures;src/vendor/imgui;src/vendor/json;src/test;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;src\Graphics\GLs;src\Graphics\Graphicals;src\Graphics\Meshes;src\Maths;src\Graphics\Utils\Textures;src/vendor/imgui;src/vendor;src/test;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
@@ -172,6 +172,7 @@
     <ClCompile Include="src\Graphics\Graphicals\GraphicsDevice.cpp" />
     <ClCompile Include="src\Graphics\Graphicals\MeshObject.cpp" />
     <ClCompile Include="src\Graphics\Utils\Textures\Texture.cpp" />
+    <ClCompile Include="src\Graphics\Utils\Textures\TextureAtlas.cpp" />
     <ClCompile Include="src\Maths\Matrix.cpp" />
     <ClCompile Include="src\test\TestBatchedTextured.cpp" />
     <ClCompile Include="src\test\TestClearColor.cpp" />
@@ -201,6 +202,9 @@
     <ClInclude Include="src\Game\BlockRenderer.h" />
     <ClInclude Include="src\Game\Game.h" />
     <ClInclude Include="src\Game\GameTime.h" />
+    <ClInclude Include="src\Game\Serialization\BlockSerialization.h" />
+    <ClInclude Include="src\Game\Serialization\VectorSerialization.h" />
+    <ClInclude Include="src\Game\Serialization\WorldSerialization.h" />
     <ClInclude Include="src\Game\World.h" />
     <ClInclude Include="src\Graphics\GLs\DynamicIndexBuffer.h" />
     <ClInclude Include="src\Graphics\GLs\DynamicVertexBuffer.h" />
@@ -218,6 +222,8 @@
     <ClInclude Include="src\Graphics\Meshes\QuadMesh.h" />
     <ClInclude Include="src\Graphics\Meshes\TriMesh.h" />
     <ClInclude Include="src\Graphics\Utils\Textures\Texture.h" />
+    <ClInclude Include="src\Graphics\Utils\Textures\TextureAtlas.h" />
+    <ClInclude Include="src\Maths\NumTypes.h" />
     <ClInclude Include="src\Maths\Vector.h" />
     <ClInclude Include="src\Maths\Maths.h" />
     <ClInclude Include="src\Maths\Matrix.h" />
@@ -231,7 +237,8 @@
     <ClInclude Include="src\test\TestDynamicVertexGeometry.h" />
     <ClInclude Include="src\test\TestingFramework.h" />
     <ClInclude Include="src\test\TestTexturedSquare.h" />
-    <ClInclude Include="src\utils\sorted_vector.h" />
+    <ClInclude Include="src\stdu\sorted_vector.h" />
+    <ClInclude Include="src\stdu\func.h" />
     <ClInclude Include="src\vendor\imgui\imconfig.h" />
     <ClInclude Include="src\vendor\imgui\imgui.h" />
     <ClInclude Include="src\vendor\imgui\imgui_impl_glfw.h" />
@@ -240,13 +247,13 @@
     <ClInclude Include="src\vendor\imgui\imstb_rectpack.h" />
     <ClInclude Include="src\vendor\imgui\imstb_textedit.h" />
     <ClInclude Include="src\vendor\imgui\imstb_truetype.h" />
-    <ClInclude Include="src\vendor\json\json.hpp" /> 
+    <ClInclude Include="src\vendor\nlohmann\json.hpp" /> 
     <ClInclude Include="src\vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include=".gitignore" />
     <Content Include="res\backup.txt" />
     <Content Include="res\game_planning.txt" />
+    <Content Include="res\levels\level_test.json" />
     <Content Include="res\textures\test_atlas.png" />
     <Content Include="res\textures\UV.png" />
     <Content Include="src\test\res\standard_colored.glsl" />
@@ -258,7 +265,6 @@
     <Content Include="src\vendor\imgui\.gitignore" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="src\Game\loader" />
     <Folder Include="src\Graphics\Utils" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
