--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -158,7 +158,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\Game\BlockBase.cpp" />
     <ClCompile Include="src\Game\BlockRenderer.cpp" />
     <ClCompile Include="src\Game\Game.cpp" />
     <ClCompile Include="src\Game\GameTime.cpp" />
@@ -201,7 +200,13 @@
   <ItemGroup>
     <ClInclude Include="src\Debugging.h" />
     <ClInclude Include="src\Game\BlockBase.h" />
+    <ClInclude Include="src\Game\BlockCreation.h" />
+    <ClInclude Include="src\Game\BlockPtr.h" />
     <ClInclude Include="src\Game\BlockRenderer.h" />
+    <ClInclude Include="src\Game\Blocks\BoxBlock.h" />
+    <ClInclude Include="src\Game\Blocks\GoalBlock.h" />
+    <ClInclude Include="src\Game\Blocks\PlayerBlock.h" />
+    <ClInclude Include="src\Game\Blocks\WallBlock.h" />
     <ClInclude Include="src\Game\Game.h" />
     <ClInclude Include="src\Game\GameTime.h" />
     <ClInclude Include="src\Game\Serialization\BlockSerialization.h" />
