--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="src\Graphics\Graphicals\MeshObject.cpp" />
     <ClCompile Include="src\Graphics\Utils\Textures\Texture.cpp" />
     <ClCompile Include="src\Graphics\Utils\Textures\TextureAtlas.cpp" />
+    <ClCompile Include="src\IO\Mouse.cpp" />
     <ClCompile Include="src\Maths\Matrix.cpp" />
     <ClCompile Include="src\test\TestBatchedTextured.cpp" />
     <ClCompile Include="src\test\TestClearColor.cpp" />
@@ -239,6 +240,8 @@
     <ClInclude Include="src\Graphics\Meshes\TriMesh.h" />
     <ClInclude Include="src\Graphics\Utils\Textures\Texture.h" />
     <ClInclude Include="src\Graphics\Utils\Textures\TextureAtlas.h" />
+    <ClInclude Include="src\IO\IO.h" />
+    <ClInclude Include="src\IO\Mouse.h" />
     <ClInclude Include="src\Maths\Corner.h" />
     <ClInclude Include="src\Maths\Direction.h" />
     <ClInclude Include="src\Maths\NumTypes.h" />
