--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-Pos=43,449
-Size=572,153
-Collapsed=1
+Pos=47,-21
+Size=572,164
+Collapsed=0
 
 [Window][Hello, world!]
 Pos=110,181
@@ -11,5 +11,10 @@ Collapsed=0
 [Window][Test]
 Pos=206,310
 Size=403,281
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=582,11
+Size=550,680
 Collapsed=0
 
