--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -209,6 +209,9 @@
     <ClCompile Include="src\vendor\imgui\imgui_widgets.cpp" />
     <None Include="cpp.hint" />
     <None Include="src\vendor\imgui\main.cpp" />
+    <ClCompile Include="src\vendor\imgui\misc\cpp\imgui_stdlib.cpp" />
+    <ClCompile Include="src\vendor\imgui\misc\fonts\binary_to_compressed_c.cpp" />
+    <ClCompile Include="src\vendor\imgui\misc\freetype\imgui_freetype.cpp" />
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -364,6 +367,9 @@
     <ClInclude Include="src\vendor\imgui\imstb_rectpack.h" />
     <ClInclude Include="src\vendor\imgui\imstb_textedit.h" />
     <ClInclude Include="src\vendor\imgui\imstb_truetype.h" />
+    <ClInclude Include="src\vendor\imgui\misc\cpp\imgui_stdlib.h" />
+    <ClInclude Include="src\vendor\imgui\misc\freetype\imgui_freetype.h" />
+    <ClInclude Include="src\vendor\imgui\misc\single_file\imgui_single_file.h" />
     <ClInclude Include="src\vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
@@ -383,6 +389,21 @@
     <Content Include="src\vendor\imgui\.editorconfig" />
     <Content Include="src\vendor\imgui\.gitattributes" />
     <Content Include="src\vendor\imgui\.gitignore" />
+    <Content Include="src\vendor\imgui\misc\cpp\README.txt" />
+    <Content Include="src\vendor\imgui\misc\debuggers\imgui.gdb" />
+    <Content Include="src\vendor\imgui\misc\debuggers\imgui.natstepfilter" />
+    <Content Include="src\vendor\imgui\misc\debuggers\README.txt" />
+    <Content Include="src\vendor\imgui\misc\fonts\Cousine-Regular.ttf" />
+    <Content Include="src\vendor\imgui\misc\fonts\DroidSans.ttf" />
+    <Content Include="src\vendor\imgui\misc\fonts\Karla-Regular.ttf" />
+    <Content Include="src\vendor\imgui\misc\fonts\ProggyClean.ttf" />
+    <Content Include="src\vendor\imgui\misc\fonts\ProggyTiny.ttf" />
+    <Content Include="src\vendor\imgui\misc\fonts\Roboto-Medium.ttf" />
+    <Content Include="src\vendor\imgui\misc\freetype\README.md" />
+    <Content Include="src\vendor\imgui\misc\README.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="src\vendor\imgui\misc\debuggers\imgui.natvis" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
